# doc_rag

./: pyproject.toml  requirements.txt  server.py
src/: create_db.py  main.py
src/app/v1/api/: auth.py  chat.py  documents.py
src/app/v1/core/: config.py
src/app/v1/database/: connection.py
src/app/v1/models/: database.py  schemas.py
src/app/v1/services/: auth_service.py  chat_service.py  document_processor.py  embedding_service.py  pinecone_service.py  rag_service.py
src/app/v1/utils/: text_extractor.py
